--- a/src/assets/styles/components/section/_default.scss
+++ b/src/assets/styles/components/section/_default.scss
@@ -2,10 +2,18 @@
   display: flex;
   flex-direction: column;
   justify-content: center;
-  padding: 60px 0;
   height: 100vh;
   position: relative;
   z-index: 1;
+}
+
+.section-viewer {
+  position: fixed;
+  top: 200px;
+  left: 0;
+  right: 0;
+  opacity: 0;
+  transition: opacity 0.2s ease-out;
 }
 
 .section-title {
@@ -15,7 +23,9 @@
   text-align: center;
   letter-spacing: -0.4px;
   line-height: 1.4;
-  margin: 100px 0 12px;
+  margin-bottom: 12px;
+  position: relative;
+  z-index: 1;
 }
 
 .section-content {
@@ -25,6 +35,10 @@
   text-align: center;
   letter-spacing: 0.3px;
   line-height: 1.5;
+  position: relative;
+  z-index: 1;
+  transform: translateY(40px);
+  transition: transform 0.01s ease-out 0.4s;
 }
 
 .section-content-desc {
@@ -33,10 +47,18 @@
   margin: auto;
 }
 
-@media #{$tablet} {
-  .section {
-    padding: 80px 30px;
+.section-active {
+  .section-viewer {
+    opacity: 1;
+    transition: opacity 0.14s ease-out 0.1s;
   }
+  .section-content {
+    transition: transform 0.4s ease-out 0.1s;
+    transform: translateY(0);
+  }
+}
+
+@media #{$tablet} {
   .section-title {
     font-size: 30px;
     margin-bottom: 12px;
@@ -48,13 +70,13 @@
 
 
 @media #{$desktop} {
-  .section {
-    padding: 120px 60px;
-  }
   .section-title {
     font-size: 48px;
   }
   .section-content {
     font-size: 24px;
+  }
+  .section-viewer {
+    top: 216px;
   }
 }
