--- a/src/assets/styles/components/section/_intro.scss
+++ b/src/assets/styles/components/section/_intro.scss
@@ -1,7 +1,7 @@
 .section-intro {
   .section-title {
     color: white;
-    margin: 100px 0 30px;
+    margin-bottom: 30px;
     z-index: 1;
   }
   .section-content {
@@ -9,6 +9,7 @@
     font-weight: 200;
     font-size: 14px;
     z-index: 1;
+    transform: translateY(0);
   }
 }
 
@@ -36,9 +37,6 @@
 
 @media #{$tablet} {
   .section-intro {
-    .section-title {
-      margin: 80px 0 30px;
-    }
     .section-content {
       font-size: 16px;
     }
@@ -50,9 +48,6 @@
 
 @media #{$desktop} {
   .section-intro {
-    .section-title {
-      margin: 100px 0 30px;
-    }
     .section-content {
       font-size: 20px;
     }
