--- a/src/assets/styles/components/section/_default.scss
+++ b/src/assets/styles/components/section/_default.scss
@@ -14,6 +14,7 @@
   right: 0;
   opacity: 0;
   transition: opacity 0.2s ease-out;
+  animation: sectioninit 0.2s;
 }
 
 .section-title {
@@ -50,12 +51,17 @@
 .section-active {
   .section-viewer {
     opacity: 1;
-    transition: opacity 0.14s ease-out 0.1s;
+    transition: opacity 0.2s ease-in;
   }
   .section-content {
     transition: transform 0.4s ease-out 0.1s;
     transform: translateY(0);
   }
+}
+
+@keyframes sectioninit {
+  from {visibility: hidden;}
+  to {visibility: visible;}
 }
 
 @media #{$tablet} {
